# smarty-mcfly

./: AGENTS.md  CLAUDE.md  README.md  TASKS.md  main.py  pyproject.toml
.smarts/: MANIFEST.md
.smarts/vim/: all.md
smarty_mcfly/: cli.py  server.py
smarty_mcfly/commands/: install.py  learn.py  smarts.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_server.py
tests/unit/: test_install.py  test_learn.py  test_smarts.py
