[project]
name = "smarty-mcfly"
version = "0.1.0"
description = "CLI tool and MCP server for generating and reading documentation as markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
    "pandoc>=2.4",
    "cyclopts>=3.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
smarty-mcfly = "smarty_mcfly.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that require network access (deselect with '-m not network')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smarty_mcfly"]
